Estandarizacion response
